cargo shuttle -> shuttle

--- a/configuration/environment.mdx
+++ b/configuration/environment.mdx
@@ -77,7 +77,7 @@ Until that feature is ready, you can use a workflow of using one Shuttle project
 To deploy to the non-default project name, you can use the `deploy` command with `--name` for targetting a different project, and `--secrets` to use a different secrets file. For example:
 
 ```sh
-cargo shuttle deploy --name project-dev --secrets Secrets.dev.toml
+shuttle deploy --name project-dev --secrets Secrets.dev.toml
 ```
 
 ## Limitations
