--- a/examples/axum-jwt-authentication.mdx
+++ b/examples/axum-jwt-authentication.mdx
@@ -19,7 +19,7 @@ Three Axum routes are registered in this file:
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 
 ```bash
-cargo shuttle init --from shuttle-hq/shuttle-examples \
+shuttle init --from shuttle-hq/shuttle-examples \
   --subfolder axum/jwt-authentication
 ```
 
@@ -230,7 +230,7 @@ tracing-subscriber = "0.3.17"
 
 ## Usage
 
-Once you've cloned this example, launch it locally by using `cargo shuttle run`. Once you've verified that it's up, you'll now be able to go to `http://localhost:8000` and start trying the example out!
+Once you've cloned this example, launch it locally by using `shuttle run`. Once you've verified that it's up, you'll now be able to go to `http://localhost:8000` and start trying the example out!
  
 First, we should be able to access the public endpoint without any authentication using:
 
