--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -6,15 +6,15 @@ description:
 ---
 
 This section revolves around simple Rocket examples you can get quickly started with by following these 3 steps:
-1. Initialize a new Rocket project by running the `cargo shuttle init --template rocket` command
+1. Initialize a new Rocket project by running the `shuttle init --template rocket` command
 2. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
-3. Running the `cargo shuttle deploy` command
+3. Running the `shuttle deploy` command
 
 <Tip>If you are looking for step-by-step guides, check out our [Tutorials](/templates/tutorials) section.</Tip>
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --template rocket
+shuttle init --template rocket
 ```
 
 <CodeGroup>
