--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -5,9 +5,9 @@ description: "Serenity is a Rust library for the Discord API."
 
 This section revolves around simple Serenity examples you can get quickly started with by following these 4 steps:
 1. Go through the steps in **Prerequisites** below
-2. Initialize a new Serenity project by running the `cargo shuttle init --template serenity` command
+2. Initialize a new Serenity project by running the `shuttle init --template serenity` command
 3. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
-4. Running the `cargo shuttle deploy` command
+4. Running the `shuttle deploy` command
 
 ### Prerequisites
 
