--- a/migration/migrating-to-shuttle.mdx
+++ b/migration/migrating-to-shuttle.mdx
@@ -94,8 +94,8 @@ name = "my-unique-app-name-here"
 Now all you need to do is to run the following commands:
 
 ```bash
-cargo shuttle project start
-cargo shuttle deploy
+shuttle project start
+shuttle deploy
 ```
 
 Your project should now be deployed!
