--- a/resources/custom-resources.mdx
+++ b/resources/custom-resources.mdx
@@ -12,7 +12,7 @@ We are using the Axum framework in `main.rs` so we can showcase the resource in 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 
 ```bash
-cargo shuttle init --from https://github.com/shuttle-hq/shuttle-examples \
+shuttle init --from https://github.com/shuttle-hq/shuttle-examples \
   --subfolder custom-resource/pdo
 ```
 
