--- a/resources/overview.mdx
+++ b/resources/overview.mdx
@@ -36,7 +36,7 @@ The Shuttle Secrets plugin provides a place to store variables which are sensiti
 To check which resources are linked to your project, use
 
 ```bash
-cargo shuttle resource list
+shuttle resource list
 ```
 
 ### Deleting resources
@@ -44,7 +44,7 @@ cargo shuttle resource list
 You can delete database resources with
 
 ```bash
-cargo shuttle resource delete [TYPE]
+shuttle resource delete [TYPE]
 ```
 
 To know what to put in the TYPE parameter, use the list command above.
