--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -39,7 +39,7 @@ The pricing of this instance can be found on our [pricing page](https://www.shut
 
 If you require a different configuration, please contact us on [Discord](https://discord.gg/shuttle) or email us at hello@shuttle.rs. We can provision any size or configuration of RDS to suit your needs - a full list of RDS features can be found [here](https://aws.amazon.com/rds/features/)
 
-Shuttle makes sure that any data stored in your provisioned database is stored permanently and will persist if you redeploy your server via `cargo shuttle deploy`, as well as if you restart your service via `cargo shuttle project restart`.
+Shuttle makes sure that any data stored in your provisioned database is stored permanently and will persist if you redeploy your server via `shuttle deploy`, as well as if you restart your service via `shuttle project restart`.
 
 ## Usage
 
