--- a/resources/shuttle-qdrant.mdx
+++ b/resources/shuttle-qdrant.mdx
@@ -9,7 +9,7 @@ This plugin allows services to connect to a [Qdrant](https://qdrant.tech/) datab
 You can get started in seconds by cloning our Axum + Qdrant example with
 
 ```bash
-cargo shuttle init --from shuttle-hq/shuttle-examples --subfolder axum/qdrant
+shuttle init --from shuttle-hq/shuttle-examples --subfolder axum/qdrant
 ```
 
 ## Usage
