--- a/support/faq.mdx
+++ b/support/faq.mdx
@@ -12,7 +12,7 @@ This section is aimed at collecting common questions users have to provide docum
     and also across all the projects that are owned by your account.
   </Accordion>
   <Accordion title="What happens when I create a project?">
-    The `cargo shuttle project start` command starts a Docker container.
+    The `shuttle project start` command starts a Docker container.
     Read more about the deployment environment [here](/configuration/environment).
   </Accordion>
   <Accordion title="What happens when I deploy to Shuttle?">
