--- a/templates/tutorials/custom-service.mdx
+++ b/templates/tutorials/custom-service.mdx
@@ -29,7 +29,7 @@ To add the bot to a server, we need to create an invite link:
 
 Start by running the following command:
 ```bash
-cargo shuttle init --template none
+shuttle init --template none
 ```
 
 This will simply initialize a new cargo crate with a dependency on `shuttle-runtime`.
@@ -187,5 +187,5 @@ async fn init(
 Try it out with the `run` command:
 
 ```bash
-cargo shuttle run
+shuttle run
 ```
