--- a/templates/tutorials/discord-weather-forecast.mdx
+++ b/templates/tutorials/discord-weather-forecast.mdx
@@ -70,7 +70,7 @@ If you don't have Shuttle yet, you can install it with
 directory:
 
 ```bash
-cargo shuttle init --template serenity
+shuttle init --template serenity
 ```
 
 After running it you, should see the following generated in `src/main.rs`:
@@ -218,7 +218,7 @@ DISCORD_TOKEN="your discord token"
 Now we can run our bot and test the hello command:
 
 ```bash
-cargo shuttle run
+shuttle run
 ```
 
 We should see that our bot now displays as online:
@@ -530,7 +530,7 @@ WEATHER_API_KEY = "***"
 With the secrets added, we can run the bot:
 
 ```bash
-cargo shuttle run
+shuttle run
 ```
 
 While typing, we should see our command come up with the options/parameters:
@@ -554,7 +554,7 @@ without having to run your PC 24/7.
 Just write:
 
 ```bash
-cargo shuttle deploy
+shuttle deploy
 ```
 
 And you are good to go. Easy-peasy, right?
