--- a/_snippets/connection-string.mdx
+++ b/_snippets/connection-string.mdx
@@ -3,7 +3,7 @@
 After deploying a project with a database macro, you can view the connection string with credentials with:
 
 ```bash
-cargo shuttle resource list --show-secrets
+shuttle resource list --show-secrets
 ```
 
 Using the connection string, you can connect to it for manual querying, inspection, and migration.
