--- a/configuration/logs.mdx
+++ b/configuration/logs.mdx
@@ -39,7 +39,7 @@ in your project is add it to your `Cargo.toml`.
 ### Configuring the default subscriber
 
 The global subscriber has an `env_filter` which defaults to the `INFO` log level if no `RUST_LOG` variable is set.
-You can change the log level for local runs with `RUST_LOG="..." cargo shuttle run`.
+You can change the log level for local runs with `RUST_LOG="..." shuttle run`.
 
 Deployments use `RUST_LOG="shuttle=debug,info"`, and this is not configurable at the moment. A custom subscriber can be set up instead.
 
@@ -47,7 +47,7 @@ Deployments use `RUST_LOG="shuttle=debug,info"`, and this is not configurable at
 
 If you opt-out of the default subscriber, you can set up logging or tracing the way you would in any other Rust application.
 The only thing you need to ensure is that your setup writes to `stdout`, as this is what Shuttle will record and return from
-the `cargo shuttle logs` commands.
+the `shuttle logs` commands.
 
 We've created an example Actix Web app with a simple `tracing`: [custom tracing example](https://github.com/shuttle-hq/shuttle-examples/tree/main/tracing/custom-tracing-subscriber).
 
@@ -58,7 +58,7 @@ We have a few commands that are useful for viewing your application's logs.
 To view the logs for your current `running` deployment, if there is one:
 
 ```bash
-cargo shuttle logs
+shuttle logs
 ```
 
 *Caveat: The above command finds the oldest deployment in the `running` state. [related issue](https://github.com/shuttle-hq/shuttle/issues/1067)*
@@ -66,23 +66,23 @@ cargo shuttle logs
 You can also view logs of a specific deployment by adding the deployment id to this command:
 
 ```bash
-cargo shuttle logs <id>
+shuttle logs <id>
 ```
 
 To get the deployment ID, you can run this command to view your deployment history:
 
 ```bash
-cargo shuttle deployment list
+shuttle deployment list
 ```
 
 The `--latest` flag will simply get the logs from the latest deployment (at the top of the table):
 
 ```bash
-cargo shuttle logs --latest
+shuttle logs --latest
 ```
 
 And last but not least, if you'd like a live feed of your logs (from a running deployment):
 
 ```bash
-cargo shuttle logs --follow
+shuttle logs --follow
 ```
