--- a/configuration/shuttle-versions.mdx
+++ b/configuration/shuttle-versions.mdx
@@ -15,7 +15,7 @@ Combining all of the above, these are the recommended steps for upgrading a Shut
 <Info>Note: Please check the [release page](https://github.com/shuttle-hq/shuttle/releases) for any considerations regarding breaking changes in the new release.</Info>
 
 1. Upgrade your `cargo-shuttle` CLI with one of the options below:
-   - `cargo shuttle upgrade` **(available in v0.48.0+)** (runs the install script below for you)
+   - `shuttle upgrade` **(available in v0.48.0+)** (runs the install script below for you)
    - `curl -sSfL https://www.shuttle.dev/install | bash` (Linux and macOS)
    - `iwr https://www.shuttle.dev/install-win | iex` (Windows)
    - `cargo binstall cargo-shuttle`
@@ -27,8 +27,8 @@ Combining all of the above, these are the recommended steps for upgrading a Shut
    # do the same for other shuttle dependencies
    ```
 
-3. Test that your project works with `cargo check` / `cargo build` / `cargo shuttle run`.
+3. Test that your project works with `cargo check` / `cargo build` / `shuttle run`.
 
-4. Upgrade your project container with `cargo shuttle project restart` (remember to use `--idle-minutes` if relevant). This will not delete any databases, and you will keep your project name.
+4. Upgrade your project container with `shuttle project restart` (remember to use `--idle-minutes` if relevant). This will not delete any databases, and you will keep your project name.
 
-5. Finally, redeploy your Shuttle app: `cargo shuttle deploy`. *(if you want to, commit your changes first)*
+5. Finally, redeploy your Shuttle app: `shuttle deploy`. *(if you want to, commit your changes first)*
