--- a/examples/actix-postgres.mdx
+++ b/examples/actix-postgres.mdx
@@ -12,7 +12,7 @@ The following routes are provided:
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from shuttle-hq/shuttle-examples \
+shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder actix-web/postgres
 ```
 
@@ -128,7 +128,7 @@ tokio = "1.26.0"
 
 ## Usage
 
-Once you've cloned the example, try launching it locally using `cargo shuttle run`. Once you've verified that it runs successfully, try using cURL in a new terminal to send a POST request:
+Once you've cloned the example, try launching it locally using `shuttle run`. Once you've verified that it runs successfully, try using cURL in a new terminal to send a POST request:
 
 ```bash
 curl -X POST -d '{"note":"Hello world!"}' -H 'Content-Type: application/json' \
