--- a/examples/actix-websocket-actorless.mdx
+++ b/examples/actix-websocket-actorless.mdx
@@ -9,7 +9,7 @@ This example shows how to use a WebSocket to show the live status of the Shuttle
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 ```bash
-cargo shuttle init --from shuttle-hq/shuttle-examples \
+shuttle init --from shuttle-hq/shuttle-examples \
  --subfolder actix-web/websocket-actorless
 ```
 
@@ -420,7 +420,7 @@ assets = ["static/*"]
 
 ## Usage
 
-Once you've cloned the example, launch it locally using `cargo shuttle run` and then go to `http://localhost:8000`. You should be able to see a status page and if you go to your Inspect/Chrome Devtools (depending on what browser you're using), if you go to the Network tab you'll see that your browser received a HTTP status code of 101. 
+Once you've cloned the example, launch it locally using `shuttle run` and then go to `http://localhost:8000`. You should be able to see a status page and if you go to your Inspect/Chrome Devtools (depending on what browser you're using), if you go to the Network tab you'll see that your browser received a HTTP status code of 101. 
 
 ---
 
