--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -6,16 +6,16 @@ description:
 ---
 
 This section revolves around simple Axum examples you can get quickly started with by following these 3 steps:
-1. Initialize a new Axum project by running the `cargo shuttle init --template axum` command
+1. Initialize a new Axum project by running the `shuttle init --template axum` command
 2. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
-3. Running the `cargo shuttle deploy` command
+3. Running the `shuttle deploy` command
 
 <Tip>If you are looking for step-by-step guides, check out our [Tutorials](/templates/tutorials) section.</Tip>
 
 You can clone the example below by running the following (you'll need `cargo-shuttle` installed):
 
 ```bash
-cargo shuttle init --template axum
+shuttle init --template axum
 ```
 
 <CodeGroup>
