--- a/getting-started/local-run.mdx
+++ b/getting-started/local-run.mdx
@@ -14,7 +14,7 @@ useful for development. To start your project on your local system, while in you
 project directory, run:
 
 ```bash
-cargo shuttle run
+shuttle run
 ```
 
 ### Local runs with databases
@@ -40,7 +40,7 @@ If you'd like to expose your application to you local network, for example if yo
 website and you'd like to open it on your phone, simply pass in the `--external` flag:
 
 ```bash
-cargo shuttle run --external
+shuttle run --external
 ```
 
 This will bind your local application to `0.0.0.0:8000`, and you will now be able to connect to it
@@ -48,7 +48,7 @@ using your computer's local IP. If you'd also like to change the port, you can d
 argument:
 
 ```bash
-cargo shuttle run --external --port 8123
+shuttle run --external --port 8123
 ```
 
 <Note>You may need to open the port your app is started on in your firewall.</Note>
@@ -62,7 +62,7 @@ Here are some small tips and tricks to boost your productivity when developing l
 To live reload your Shuttle app when you save a file, you can use [cargo-watch](https://github.com/watchexec/cargo-watch):
 
 ```bash
-# This will e(x)ecute `cargo shuttle run` when you save a file.
+# This will e(x)ecute `shuttle run` when you save a file.
 cargo watch -x 'shuttle run'
 # This will also (q)uietly (c)lear the console between runs.
 cargo watch -qcx 'shuttle run'
@@ -70,7 +70,7 @@ cargo watch -qcx 'shuttle run'
 # There are many other helpful options, see `cargo watch --help`
 ```
 
-Small caveat: Be aware that ignoring files with `.ignore` will also affect the behaviour of `cargo shuttle deploy`.
+Small caveat: Be aware that ignoring files with `.ignore` will also affect the behaviour of `shuttle deploy`.
 
 #### Live reload frontend with `tower-livereload`
 
